tests/core/error/fts-offsets-1.rq
SELECT (fts:offsets(?u, 1) AS ?off) { ?u a rdfs:Resource }
